[package]
name = "smart-road"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = "0.36"
rand = "0.3.14"


[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["image", "ttf"]
